### Added
- Added keepold flag for PTMProphet.

### Changed
- Philosopher will ignore the interact file when interact.mod is present.
- Improved quantification mapping to all runs. The  --mapmods option is only necessary to print mod reports.

### Fixed
- Error preventing iTRAQ quantification.