@@ -39,6 +39,7 @@ func (evi *Evidence) UpdateNumberOfEnzymaticTermini() {
 	}
 
 	for i := range evi.PSM {
+
 		key := fmt.Sprintf("%s#%s", evi.PSM[i].Peptide, evi.PSM[i].Protein)
 		ntt, ok := nttPeptidetoProptein[key]
 		if ok {
@@ -146,176 +147,6 @@ func (evi *Evidence) UpdateIonStatus(decoyTag string) {
 
 	return
 }
-
-// func (evi *Evidence) UpdateIonStatus(decoyTag string) {
-
-// 	var uniqueMap = make(map[string]bool)
-// 	var urazorMap = make(map[string]string)
-// 	var uniqueSeqMap = make(map[string]string)
-
-// 	// collect the updated ntt for each peptide-protein pair
-// 	var nttPeptidetoProptein = make(map[string]uint8)
-
-// 	for _, i := range evi.Proteins {
-
-// 		for _, j := range i.TotalPeptideIons {
-// 			if j.IsUnique == true {
-// 				uniqueMap[j.IonForm] = true
-// 			}
-
-// 			key := fmt.Sprintf("%s#%s", j.Sequence, j.Protein)
-// 			nttPeptidetoProptein[key] = j.NumberOfEnzymaticTermini
-// 		}
-
-// 		for _, j := range i.TotalPeptideIons {
-// 			if j.IsURazor == true {
-// 				urazorMap[j.IonForm] = i.PartHeader
-// 			}
-// 		}
-// 	}
-
-// 	for i := range evi.PSM {
-
-// 		// the decoy tag checking is a failsafe mechanism to avoid proteins
-// 		// with real complex razor case decisions to pass downstream
-// 		// wrong classifications. If by any chance the protein gets assigned to
-// 		// a razor decoy, this mechanism avoids the replacement
-
-// 		rp, rOK := urazorMap[evi.PSM[i].IonForm]
-// 		if rOK {
-
-// 			evi.PSM[i].IsURazor = true
-
-// 			// we found cases where the peptide maps to both target and decoy but is
-// 			// assigned as razor to the decoy. the IF statement below replaces the
-// 			// decoy by the target but it was removed because in some cases the protein
-// 			// does not pass the FDR filtering.
-
-// 			//if !strings.Contains(rp, decoyTag) {
-// 			//evi.PSM[i].MappedProteins[evi.PSM[i].Protein] = 0
-// 			//delete(evi.PSM[i].MappedProteins, rp)
-// 			//evi.PSM[i].Protein = rp
-// 			//}
-
-// 			evi.PSM[i].MappedProteins[evi.PSM[i].Protein] = 0
-
-// 			delete(evi.PSM[i].MappedProteins, rp)
-// 			// for j := range evi.PSM[i].MappedProteins {
-// 			// 	if strings.Contains(j, decoyTag) {
-// 			// 		delete(evi.PSM[i].MappedProteins, j)
-// 			// 	}
-// 			// }
-
-// 			evi.PSM[i].Protein = rp
-
-// 			if strings.Contains(rp, decoyTag) {
-// 				evi.PSM[i].IsDecoy = true
-// 			}
-
-// 			spew.Dump(nttPeptidetoProptein)
-
-// 			// update the number of enzymatic termini from the prot.xml
-// 			key := fmt.Sprintf("%s#%s", evi.PSM[i].Peptide, evi.PSM[i].Protein)
-// 			ntt, ok := nttPeptidetoProptein[key]
-// 			if ok {
-// 				before := evi.PSM[i].NumberOfEnzymaticTermini
-// 				evi.PSM[i].NumberOfEnzymaticTermini = int(ntt)
-// 				after := evi.PSM[i].NumberOfEnzymaticTermini
-// 				fmt.Sprintln(evi.PSM[i].Spectrum, evi.PSM[i].Protein, before, "\t", after)
-// 			}
-
-// 		}
-
-// 		// for j := range evi.PSM[i].MappedProteins {
-// 		// 	if strings.Contains(j, decoyTag) {
-// 		// 		delete(evi.PSM[i].MappedProteins, j)
-// 		// 	}
-// 		// }
-
-// 		_, uOK := uniqueMap[evi.PSM[i].IonForm]
-// 		if uOK {
-// 			evi.PSM[i].IsUnique = true
-// 		}
-
-// 		uniqueSeqMap[evi.PSM[i].Peptide] = evi.PSM[i].Protein
-// 	}
-
-// 	for i := range evi.Ions {
-
-// 		rp, rOK := urazorMap[evi.Ions[i].IonForm]
-// 		if rOK {
-
-// 			evi.Ions[i].IsURazor = true
-
-// 			// if !strings.Contains(rp, decoyTag) {
-// 			// 	evi.Ions[i].MappedProteins[evi.Ions[i].Protein] = 0
-// 			// 	delete(evi.Ions[i].MappedProteins, rp)
-// 			// 	evi.Ions[i].Protein = rp
-// 			// }
-
-// 			evi.Ions[i].MappedProteins[evi.Ions[i].Protein] = 0
-
-// 			delete(evi.Ions[i].MappedProteins, rp)
-// 			// for j := range evi.Ions[i].MappedProteins {
-// 			// 	if strings.Contains(j, decoyTag) {
-// 			// 		delete(evi.Ions[i].MappedProteins, j)
-// 			// 	}
-// 			// }
-
-// 			evi.Ions[i].Protein = rp
-
-// 			if strings.Contains(rp, decoyTag) {
-// 				evi.Ions[i].IsDecoy = true
-// 			}
-
-// 		}
-
-// 		// for j := range evi.Ions[i].MappedProteins {
-// 		// 	if strings.Contains(j, decoyTag) {
-// 		// 		delete(evi.Ions[i].MappedProteins, j)
-// 		// 	}
-// 		// }
-
-// 		_, uOK := uniqueMap[evi.Ions[i].IonForm]
-// 		if uOK {
-// 			evi.Ions[i].IsUnique = true
-// 		} else {
-// 			evi.Ions[i].IsUnique = false
-// 		}
-// 	}
-
-// 	for i := range evi.Peptides {
-
-// 		v, ok := uniqueSeqMap[evi.Peptides[i].Sequence]
-// 		if ok {
-
-// 			evi.Peptides[i].MappedProteins[evi.Peptides[i].Protein] = 0
-
-// 			delete(evi.Peptides[i].MappedProteins, v)
-// 			// for j := range evi.Peptides[i].MappedProteins {
-// 			// 	if strings.Contains(j, decoyTag) {
-// 			// 		delete(evi.Peptides[i].MappedProteins, j)
-// 			// 	}
-// 			// }
-
-// 			evi.Peptides[i].Protein = v
-
-// 		}
-
-// 		// for j := range evi.Peptides[i].MappedProteins {
-// 		// 	if strings.Contains(j, decoyTag) {
-// 		// 		delete(evi.Peptides[i].MappedProteins, j)
-// 		// 	}
-// 		// }
-
-// 		if strings.Contains(v, decoyTag) {
-// 			evi.Peptides[i].IsDecoy = true
-// 		}
-
-// 	}
-
-// 	return
-// }
 
 // UpdateIonModCount counts how many times each ion is observed modified and not modified
 func (evi *Evidence) UpdateIonModCount() {
