@@ -4,6 +4,7 @@
 ### Changed
 - Philosopher will ignore the interact file when interact.mod is present.
 - Improved quantification mapping to all runs. The  --mapmods option is only necessary to print mod reports.
+- The number of tryptic ternmini is now determined by ProteinProphet.
 
 ### Fixed
 - Error preventing iTRAQ quantification.
